@@ -69,4 +69,4 @@ group = sms-service
 keyword = default
 omit-empty = true
 max-messages = 0
-get-url = "http://CHANGE_THIS_TO_YOUR_PLAYSMS_URL/index.php?app=call&cat=gateway&plugin=kannel&access=geturl&t=%t&q=%q&a=%a"
+get-url = "http://CHANGE_THIS_TO_YOUR_PLAYSMS_URL/index.php?app=call&cat=gateway&plugin=kannel&access=geturl&t=%t&q=%q&a=%a&Q=%Q"
